2009-12-16  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Fisher.

        [V8] There is no such thing as HTMLSelectElementCollection.
        https://bugs.webkit.org/show_bug.cgi?id=32616

        Refactoring, covered by existing tests.

        * WebCore.gypi: Removed V8HTMLSelectElementCollectionCustom.cpp
        * bindings/v8/V8Collection.h: Removed one-off template.
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getTemplate): Renamed all references to HTMLSelectElementCollection
            to HTMLSelectElement.
        * bindings/v8/custom/V8CustomBinding.h: Renamed custom indexer decls.
        * bindings/v8/custom/V8HTMLSelectElementCollectionCustom.cpp: Removed.
        * bindings/v8/custom/V8HTMLSelectElementCustom.cpp: Moved code as-is from
            V8HTMLSelectElementCollectionCustom.cpp

2009-12-16  Dan Winship  <danw@gnome.org>

        Reviewed by Gustavo Noronha Silva.

        [Gtk] Content-Encoding support

        https://bugs.webkit.org/show_bug.cgi?id=25855

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::startHttp): Don't force "Accept-Encoding: identity" any
        more

2009-12-16  Benjamin Otte  <otte@gnome.org>

        Reviewed by Darin Adler.

        Get rid of the phase argument to Image::drawPattern.
        https://bugs.webkit.org/show_bug.cgi?id=31187

        The argument can be expressed equally well as part of the
        patternTransform. All backends but the Qt one did exactly that
        manually anyway.

        * platform/graphics/BitmapImage.h:
        * platform/graphics/GeneratedImage.cpp:
        (WebCore::GeneratedImage::drawPattern):
        * platform/graphics/GeneratedImage.h:
        * platform/graphics/Image.cpp:
        (WebCore::Image::drawTiled):
        * platform/graphics/Image.h:
        * platform/graphics/cairo/ImageCairo.cpp:
        (WebCore::Image::drawPattern):
        * platform/graphics/cg/ImageCG.cpp: