@@ -1,3 +1,13 @@
+2009-12-16  anton muhin  <antonm@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        [dom] make dom/Node.cpp compile if DUMP_NODE_STATISTICS is on
+        https://bugs.webkit.org/show_bug.cgi?id=32617
+
+        * dom/Node.cpp:
+        (WebCore::Node::dumpStatistics):
+
 2009-12-16  Dimitri Glazkov  <dglazkov@chromium.org>
 
         Reviewed by Darin Fisher.
